--- a/Angular/Orenda-Ecommerce/src/index.html
+++ b/Angular/Orenda-Ecommerce/src/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>OrendaEcommerce</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="./assets/themes/vendors/feather/feather.css">
+  <link rel="stylesheet" href="./assets/themes/vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" href="./assets/themes/vendors/css/vendor.bundle.base.css">
+  <link rel="stylesheet" href="./assets/themes/vendors/select2/select2.min.css">
+  <link rel="stylesheet" href="./assets/themes/vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/themes/css/vertical-layout-light/style.css">
+  <link rel="shortcut icon" href="./assets/themes/images/favicon.png" />
 </head>
+
 <body>
   <app-root></app-root>
+
+  <script src="./assets/themes/vendors/js/vendor.bundle.base.js"></script>
+  <script src="./assets/themes/vendors/typeahead.js/typeahead.bundle.min.js"></script>
+  <script src="./assets/themes/vendors/select2/select2.min.js"></script>
+  <script src="./assets/themes/js/off-canvas.js"></script>
+  <script src="./assets/themes/js/hoverable-collapse.js"></script>
+  <script src="./assets/themes/js/template.js"></script>
+  <script src="./assets/themes/js/settings.js"></script>
+  <script src="./assets/themes/js/todolist.js"></script>
+  <script src="./assets/themes/js/file-upload.js"></script>
+  <script src="./assets/themes/js/typeahead.js"></script>
+  <script src="./assets/themes/js/select2.js"></script>
 </body>
+
 </html>
