phần action theme

--- a/Angular/Orenda-Ecommerce/src/index.html
+++ b/Angular/Orenda-Ecommerce/src/index.html
@@ -25,7 +25,7 @@
   <script src="./assets/themes/vendors/select2/select2.min.js"></script>
   <script src="./assets/themes/js/off-canvas.js"></script>
   <script src="./assets/themes/js/hoverable-collapse.js"></script>
-  <script src="./assets/themes/js/template.js"></script>
+  <!-- <script src="./assets/themes/js/template.js"></script> -->
   <script src="./assets/themes/js/settings.js"></script>
   <script src="./assets/themes/js/todolist.js"></script>
   <script src="./assets/themes/js/file-upload.js"></script>
