phần hoàn thiện theme and fetures

--- a/Angular/Orenda-Ecommerce/src/index.html
+++ b/Angular/Orenda-Ecommerce/src/index.html
@@ -23,7 +23,7 @@
   <script src="./assets/themes/vendors/js/vendor.bundle.base.js"></script>
   <script src="./assets/themes/vendors/typeahead.js/typeahead.bundle.min.js"></script>
   <script src="./assets/themes/vendors/select2/select2.min.js"></script>
-  <script src="./assets/themes/js/off-canvas.js"></script>
+  <!-- <script src="./assets/themes/js/off-canvas.js"></script> -->
   <script src="./assets/themes/js/hoverable-collapse.js"></script>
   <!-- <script src="./assets/themes/js/template.js"></script> -->
   <script src="./assets/themes/js/settings.js"></script>
